backwards compatibility. [David]

=item *

Renamed "Element" to "Element Type" and "Element Type" to "Element Type Set".
This is to avoid confusing element types, which define the structure of
elements, and elements, which are contain content and are based on element
types. These are not ideal names, but at least we now have something different
to call them. [David]

=back

=head1 VERSION 1.9.0 "Punkin" (2005-08-19)

=head2 New Features

=over 4

=item *

Added C<MASON_INTERP_ARGS> F<bricolage.conf> directive to allow arguments to
be passed to the Mason template interpreter. [Scott]

=item *

Added support for sub-second precision to date and time management in
Bricolage. This means that dates can be stored in the database with
microsecond precision. This was done by modifying Bricolage's date and time
handling to use the DateTime module from CPAN under the hood. The upshot is
that you can use the full suite of C<strftime> formats supported by DateTime,
including the formats for milliseconds and microseconds. Sponsored by Alinghi.
[David]

=item *

Added new "Precision" option to DateTime fields added to elements and
contributor types. The supported precisions are "Year", "Month", "Day",
"Hour", "Minute", "Second", "Millisecond", and "Microsecond". For purposes of
backwards compatibility, the default precision for custom DateTime fields is
"Minute". Sponsored by Alinghi. [David]

=item *

Added C<preview_another_all_ocs()> and C<blaze_another()> to
Bric::Util::Burner. The former executes a preview for all of the output
channels a document is associated with. The latter takes a document for its
argument and calls C<publish_another()> in PUBLISH_MODE and
C<preview_another_all_ocs()> in PREVIEW_MODE. [Serge Sozonoff]

=item *

Added C<$INSTALL_VERBOSITY> makefile environment variable that, when set to
"QUIET", eliminates many of the questions asked during installation and
cloning, falling back on the default values. [Rod Taylor & Andrea Rota]

=item *
