@@ -31,6 +31,8 @@ my $disp = get_disp_name('story');
 $checkout => undef
 $version  => undef
 $return	  => undef
+$scrollx  => 0
+$scrolly  => 0
 </%args>
 
 %#-- Init Section --#
@@ -53,11 +55,16 @@ my $content = $m->scomp('/widgets/story_prof/story_prof.mc',
 # Output the Header.
 $m->comp("/widgets/wrappers/sharky/header.mc",
 	 title => "$disp Profile",
-	 context => "Workflow | Profile | $disp | " . $r->pnotes('story_prof|title'));
+	 context => "Workflow | Profile | $disp | " . $r->pnotes('story_prof|title'),
+         scrollx => $scrollx,
+         scrolly => $scrolly);
 
 </%init>
 %# Output the content.
-<form method="post" action="<% $r->uri %>" name="theForm" id="theForm" enctype="multipart/form-data" onSubmit="return confirmChanges('theForm')">
+<form method="post" action="<% $r->uri %>" name="theForm" id="theForm" enctype="multipart/form-data" onSubmit="saveScrollXY('theForm'); return confirmChanges('theForm')">
+%# XXX
+<& '/widgets/profile/hidden.mc', name => 'scrollx', value => 0 &>
+<& '/widgets/profile/hidden.mc', name => 'scrolly', value => 0 &>
 <% $content %>
 </form>
 <& /widgets/wrappers/sharky/footer.mc &>
